[gd_scene load_steps=10 format=3 uid="uid://mainscene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://enemyscene" path="res://scenes/Enemy.tscn" id="3"]
[ext_resource type="Theme" uid="uid://premiumtheme" path="res://themes/PremiumTheme.tres" id="4"]

[sub_resource type="Animation" id="Animation_game_start"]
length = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_high_score"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/HighScoreLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_difficulty_up"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.2, 1.2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_victory"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1.5, 1.5, 1.5, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_game_over"]
length = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(0.5, 0.5, 0.5, 0)]
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_main"]
emission_shape = 1
emission_sphere_radius = 100.0
direction = Vector3(0, -1, 0)
spread = 45.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
color = Color(0.8, 0.9, 1, 0.5)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.02, 0.02, 0.05, 1)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(400, 300)
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_player")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4")

[node name="ScorePanel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -10.0
grow_vertical = 0

[node name="ScoreLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "Score: 0"
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)

[node name="HighScoreLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Best: 0"
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)

[node name="ParticleSystem" type="GPUParticles2D" parent="."]
position = Vector2(400, 300)
process_material = SubResource("ParticleProcessMaterial_main")
emitting = false

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_game_animations")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_game_animations"]
_data = {
"difficulty_up": SubResource("Animation_difficulty_up"),
"game_over": SubResource("Animation_game_over"),
"game_start": SubResource("Animation_game_start"),
"high_score": SubResource("Animation_high_score"),
"victory": SubResource("Animation_victory")
}